--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,8 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-/frontend/node_modules
-/backend/node_modules
-/backend/config
+node_modules
+config
 dist
 dist-ssr
 *.local
